Fix width of menu links when sidebar is collapsed

--- a/themes/gitlab-docs/assets/css/layout.css
+++ b/themes/gitlab-docs/assets/css/layout.css
@@ -85,4 +85,5 @@ h6,
 }
 .sidebar-collapsed > div.global-nav {
   opacity: 0;
+  width: 0;
 }
